apps/paperless/manifests/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      port: 80
      targetPort: http
