apps/paperless/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paperless
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  clusterIP: None
