apps/paperless/manifests/paperless-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: main
      namespace: traefik
  hostnames:
    - paperless.k8s.hyperion.internal
    - paperless.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 80
